--- a/index.html
+++ b/index.html
@@ -3,117 +3,298 @@
 <head>
 <meta charset="UTF-8">
 <title>Sky キャンドル計算機</title>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- フォント読み込み -->
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Roboto:wght@100&family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+
 <style>
   /* 全体 */
   body {
     font-family: 'Baloo 2', cursive;
     background: linear-gradient(135deg, #fdfbff 0%, #eef5ff 40%, #fdf6ff 100%);
     margin: 0;
-    padding: 24px 12px 140px;
+    padding: 24px 12px 260px;
     color: #222;
+    position: relative;
   }
-  .app { max-width: 960px; margin: 0 auto; }
+  .app {
+    max-width: 960px;
+    margin: 0 auto;
+  }
 
-  /* タイトルカード */
+  /* タイトル */
   .header-card {
-    background: radial-gradient(circle at top left, #fef7ff 0%, #ffffff 40%, #f5f8ff 100%);
-    border-radius: 28px;
-    padding: 18px 24px;
-    box-shadow: 0 10px 30px rgba(123, 154, 255, 0.18);
+    background: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    padding: 0 !Important;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     gap: 14px;
-    border: 2px solid rgba(210, 220, 255, 0.9);
   }
-  .title-with-icon { display: flex; align-items: center; gap: 10px; }
-  .title-icon { width: 42px; height: 42px; object-fit: contain; filter: drop-shadow(0 0 4px rgba(255, 190, 90, 0.3)); }
-  .page-title { font-size: 26px; font-weight: 600; letter-spacing: 0.06em; }
+  .page-title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 32px;
+    letter-spacing: 0.04em;
+  }
 
   /* カテゴリカード */
   .category {
-    background: #ffffff;
-    border-radius: 24px;
-    padding: 18px 22px 16px;
-    margin-bottom: 18px;
-    box-shadow: 0 6px 18px rgba(70, 90, 150, 0.22);
-    border: 2px solid rgba(210, 220, 255, 0.9);
-    position: relative;
+    background:#fff;
+    border-radius:24px;
+    padding:18px 22px 16px;
+    margin-bottom:18px;
+    box-shadow:0 6px 18px rgba(70,90,150,0.22);
+    border:2px solid rgba(210,220,255,0.9);
   }
-  .category-header { display: flex; align-items: center; gap: 10px; margin-bottom: 12px; }
-  .category-label { font-size: 20px; font-weight: 600; color: #222; }
-  .category-toggle { appearance: none; width: 20px; height: 20px; border-radius: 6px; border: 2px solid #ff9b42; cursor: pointer; transition: 0.2s; background: #fff; }
-  .category-toggle:checked { background: linear-gradient(135deg, #ffb36b, #ff9b42); border-color: #ff9b42; }
+  .category-header {
+    display:flex;
+    align-items:center;
+    gap:10px;
+    margin-bottom:12px;
+  }
+  .category-label {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size:20px;
+    font-weight:700;
+  }
 
-  /* アイテムグリッド */
-  .items { display: grid; grid-template-columns: repeat(4, minmax(0,1fr)); gap: 8px; }
-  @media (max-width:480px){ .items { grid-template-columns: repeat(2, minmax(0,1fr)); } }
-  .check-wrapper { display: flex; align-items: center; gap: 8px; padding: 6px 10px; cursor: pointer; border-radius: 999px; background: rgba(248,251,255,0.95); border: 1px solid rgba(185,211,255,0.6); transition: 0.18s; }
-  .check-wrapper:hover { box-shadow:0 4px 10px rgba(149,177,255,0.25); transform: translateY(-1px); }
-  .check-input { appearance:none; width:18px; height:18px; border:2px solid #87bfff; border-radius:50%; background:#fff; transition:0.2s; }
-  .check-input:checked { background:#3a8cff; border-color:#3a8cff; }
-  .item-name{ flex:1; font-size:14px; }
-  .item-value{ font-size:12px; padding:2px 8px; border-radius:999px; background: rgba(61,138,255,0.08); border:1px solid rgba(61,138,255,0.25); color:#2250a6; }
+  .category-toggle {
+    appearance:none;
+    width:20px; height:20px;
+    border-radius:6px;
+    border:2px solid #ff9b42;
+    background:#fff;
+  }
+  .category-toggle:checked {
+    background:linear-gradient(135deg,#ffb36b,#ff9b42);
+  }
 
-  /* 画面下に固定される合計バー */
+  .items {
+    display:grid;
+    grid-template-columns:repeat(4,minmax(0,1fr));
+    gap:8px;
+  }
+
+  .check-wrapper {
+    display:flex;
+    align-items:center;
+    gap:8px;
+    padding:6px 10px;
+    border-radius:999px;
+    background:rgba(248,251,255,0.95);
+    border:1px solid rgba(185,211,255,0.6);
+  }
+
+  .check-input {
+    appearance:none;
+    width:18px; height:18px;
+    border:2px solid #87bfff;
+    border-radius:50%;
+    background:#fff;
+  }
+  .check-input:checked {
+    background:#3a8cff;
+    border-color:#3a8cff;
+  }
+
+  .item-name { 
+    flex:1; 
+    font-size:14px; 
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 600;
+  }
+  .item-value {
+    font-size:12px;
+    font-weight: 400;
+    padding:2px 8px;
+    border-radius:999px;
+    background:rgba(61,138,255,0.08);
+    border:1px solid rgba(61,138,255,0.25);
+  }
+
+  /* ▼▼ 合計カード ▼▼ */
   #southPanel {
     position: fixed;
-    left:50%;
+    left: 50%;
     transform: translateX(-50%);
-    bottom:16px;
+    bottom: 16px;
     width: calc(100% - 24px);
-    max-width:960px;
-    background: rgba(255,255,255,0.82);
+    max-width: 960px;
+    background: rgba(255,255,255,0.88);
     backdrop-filter: blur(12px);
-    border-radius:20px;
-    padding:14px 20px;
-    box-shadow:0 8px 24px rgba(60,80,150,0.35);
-    border:1px solid rgba(150,170,240,0.9);
-    z-index:1000;
+    border-radius: 20px;
+    padding: 12px 18px 10px;
+    box-shadow: 0 8px 24px rgba(60,80,150,0.35);
+    border: 1px solid rgba(150,170,240,0.9);
+    z-index: 1000;
   }
-  .total-row { display:flex; justify-content:space-between; align-items:center; }
-  #total { font-size:26px; font-weight:700; color:#2d3a80; }
-  #resetButton { padding:10px 20px; background:linear-gradient(135deg,#ff8b8b,#ff6b6b); color:white; border-radius:999px; border:none; cursor:pointer; font-weight:600; }
-  #resetButton:hover { background:linear-gradient(135deg,#ff7676,#ff5252); }
+  #total {
+    font-size: 22px;
+    font-weight: 700;
+    color: #2d3a80;
+    font-family:'Noto Sans JP',sans-serif;
+  }
 
-  /* 合計光るアニメ */
-  @keyframes totalFlash {
-    0% { text-shadow:0 0 0 rgba(255,210,120,0); color:#2d3a80; }
-    40%{ text-shadow:0 0 14px rgba(255,220,150,1); color:#d28a2b; }
-    100%{ text-shadow:0 0 0 rgba(255,210,120,0); color:#2d3a80; }
+  #required,
+  .thresholds {
+    font-size: 18px;
+    font-weight: 700;
+    color: #000;
+    font-family:'Noto Sans JP', sans-serif;
   }
-  #total.flash { animation: totalFlash 0.6s ease-out; }
+
+  /* ▼▼ ゲージ ▼▼ */
+  .gauge-wrapper {
+    margin-top: 6px;
+    margin-bottom: 6px;
+    position: relative;
+  }
+  .gauge-track {
+    position: relative;
+    height: 18px;
+    border-radius: 999px;
+    background: #d0d0d0;
+    border: 1px solid #aaa;
+    overflow: hidden;
+  }
+
+  .gauge-fill {
+    position: absolute;
+    top:0; left:0;
+    width: 0%;
+    height: 100%;
+    background: linear-gradient(180deg,#afc9f0,#3787ff);
+    transition: width 0.4s ease-out;
+    z-index:2;
+  }
+
+  #gaugeMarker {
+    position:absolute;
+    top:-30px;
+    transform:translateX(-50%);
+    width:44px; height:44px;
+    z-index:5;
+    pointer-events:none;
+    transition:left 0.4s ease-out 0.05s;
+  }
+  #gaugeMarker img {
+    width:44px; height:44px;
+    filter:none;
+  }
+
+  /* 下側メモリ */
+  .gauge-segment {
+    position:absolute;
+    width:2px;
+    height:10px;
+    bottom:-6px;
+    background:rgba(80,80,80,0.45);
+    border-radius:2px;
+    z-index:3;
+  }
+  .gauge-segment.major {
+    width:3px;
+    height:16px;
+    bottom:-8px;
+    background:rgba(30,30,30,0.9);
+  }
+
+  .gauge-labels {
+    display:flex;
+    justify-content:space-between;
+    font-size:11px;
+    margin-top:4px;
+    padding:0 6px;
+  }
+  .gauge-labels span:nth-child(1),
+  .gauge-labels span:nth-child(5) {
+    visibility: hidden;
+  }
+
+  /* ★ 上側ラベル専用レイヤー（southPanelの外に出す） */
+  #topLabelLayer {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+    z-index: 5000;
+  }
+  .gauge-top-label {
+    position: absolute;
+    font-size: 12px;
+    font-family:'Noto Sans JP', sans-serif;
+    font-weight: 700;
+    color: #000;        /* ← ここが完全な黒で出る */
+    transform: translateX(-50%);
+    white-space: nowrap;
+  }
+
+  #resetButton {
+    padding:8px 18px;
+    background:linear-gradient(135deg,#ff8b8b,#ff6b6b);
+    border-radius:999px;
+    color:white;
+    border:none;
+    cursor:pointer;
+    font-weight:700;
+  }
+
+  .south-bottom-row {
+    margin-top:8px;
+    display:flex;
+    justify-content:space-between;
+    align-items:flex-start;
+  }
 </style>
 </head>
 <body>
 <div class="app">
+
   <!-- タイトル -->
   <div class="header-card">
-    <div class="title-with-icon">
-      <img src="candle.png" class="title-icon" alt="">
-      <div>
-        <div class="page-title">キャンドル計算機</div>
-      </div>
-    </div>
+    <div class="page-title">キャンドル計算機</div>
   </div>
 
-  <!-- メイン -->
   <div id="mainPanel"></div>
 
-  <!-- 下固定の合計バー（右にリセットボタン） -->
+  <!-- ▼ 合計カード ▼ -->
   <div id="southPanel">
-    <div class="total-row">
-      <div id="total">合計: 0</div>
+    <div id="total">合計: 0 （0キャンドル）</div>
+
+    <div class="gauge-wrapper">
+      <div class="gauge-track" id="gaugeTrack">
+        <div class="gauge-fill" id="gaugeFill"></div>
+      </div>
+
+      <div id="gaugeMarker">
+        <img src="candle.png">
+      </div>
+
+      <div class="gauge-labels">
+        <span>0</span><span>5</span><span>10</span><span>15</span><span>20</span>
+      </div>
+    </div>
+
+    <div class="south-bottom-row">
+      <div>
+        <div id="required">デイリーライト: <b>2055（15キャンドル）</b></div>
+      </div>
       <button id="resetButton">全てリセット</button>
     </div>
-    <div id="required">必要ライト: <b>2055（15キャンドル）</b></div>
-    <div>(16)2268 / (17)2481 / (18)2719 / (19)3207 / (20)4195</div>
   </div>
 </div>
 
+<!-- ★ 上側ラベルを描画するレイヤー（パネルの外） -->
+<div id="topLabelLayer"></div>
+
 <script>
-/* データ定義 */
+/* ========= データ ========= */
 const categories=["孤島","草原","雨林","峡谷","捨て地","書庫","その他","ソーシャル"];
 const items=[
   ["初期エリア","予言者の席窟","水の試練","土の試練","風の試練","火の試練"],
@@ -125,6 +306,7 @@ const items=[
   ["ホーム","風の街道","星月夜の砂漠","オフィス"],
   ["シナモン","大キャン4","キャンドル2倍","パン屋","ウニ焼き","闇の欠片"]
 ];
+
 const values=[
   [200,50,100,105,200,200],
   [55,119,45,99,50,299],
@@ -135,6 +317,7 @@ const values=[
   [23,30,140,57],
   [50,200,200,600,300,200]
 ];
+
 const sundayValues=[
   [0,0,0,0,0,0],
   [0,0,0,0,0,0],
@@ -145,74 +328,195 @@ const sundayValues=[
   [0,0,0,0],
   [0,0]
 ];
-const isSunday=new Date().getDay()===0;
+
+const candleThresholds=[
+  {max:93,candles:0},{max:187,candles:1},{max:281,candles:2},{max:375,candles:3},
+  {max:469,candles:4},{max:608,candles:5},{max:747,candles:6},{max:886,candles:7},
+  {max:1025,candles:8},{max:1164,candles:9},{max:1342,candles:10},{max:1520,candles:11},
+  {max:1698,candles:12},{max:1876,candles:13},{max:2054,candles:14},{max:2267,candles:15},
+  {max:2480,candles:16},{max:2718,candles:17},{max:3206,candles:18},{max:4194,candles:19},
+  {max:Infinity,candles:20}
+];
+
+/* 上側しきい値 */
+const thresholdMap = {
+  15:2055,
+  16:2268,
+  17:2481,
+  18:2719,
+  19:3207,
+  20:4195
+};
+
+const isSunday = (new Date().getDay() === 0);
 let activeValues = isSunday ? sundayValues : values;
 
-/* UI構築 */
-const mainPanel=document.getElementById("mainPanel");
-const totalLabel=document.getElementById("total");
+const mainPanel  = document.getElementById("mainPanel");
+const totalLabel = document.getElementById("total");
+const gaugeFill  = document.getElementById("gaugeFill");
+const gaugeMarker= document.getElementById("gaugeMarker");
+const gaugeTrack = document.getElementById("gaugeTrack");
+const topLabelLayer = document.getElementById("topLabelLayer");
+
 let checkBoxes=[];
-let lastTotal=0;
+let lastCandles=0;
 
+/* 下メモリ 1〜19 生成 */
+for(let i=1;i<=19;i++){
+  const mem=document.createElement("div");
+  mem.classList.add("gauge-segment");
+  mem.style.left=(i/20*100)+"%";
+  if(i===5||i===10||i===15) mem.classList.add("major");
+  gaugeTrack.appendChild(mem);
+}
+
+/* カテゴリ生成 */
 categories.forEach((cat,i)=>{
-  const catDiv=document.createElement("div");
-  catDiv.className="category";
+  const card=document.createElement("div");
+  card.className="category";
 
-  const header=document.createElement("div");
-  header.className="category-header";
+  const head=document.createElement("div");
+  head.className="category-header";
 
   const toggle=document.createElement("input");
-  toggle.type="checkbox"; toggle.className="category-toggle";
+  toggle.type="checkbox";
+  toggle.className="category-toggle";
+
   toggle.addEventListener("change",()=>{
     items[i].forEach((_,j)=>{
-      const cb=checkBoxes[i][j]; cb.checked=toggle.checked;
+      const cb=checkBoxes[i][j];
+      cb.checked=toggle.checked;
       localStorage.setItem(cb.id,cb.checked);
     });
     updateTotal();
   });
 
-  const title=document.createElement("label");
-  title.textContent=cat; title.className="category-label";
+  const label=document.createElement("span");
+  label.className="category-label";
+  label.textContent=cat;
 
-  header.appendChild(toggle); header.appendChild(title);
-  catDiv.appendChild(header);
+  head.appendChild(toggle);
+  head.appendChild(label);
+  card.appendChild(head);
 
-  const itemsDiv=document.createElement("div"); itemsDiv.className="items";
+  const list=document.createElement("div");
+  list.className="items";
+
   checkBoxes[i]=[];
+
   items[i].forEach((name,j)=>{
-    const wrapper=document.createElement("label"); wrapper.className="check-wrapper";
-    const cb=document.createElement("input"); cb.type="checkbox"; cb.className="check-input";
-    cb.id=`cb_${i}_${j}`; cb.dataset.value=activeValues[i][j];
+    const wrap=document.createElement("label");
+    wrap.className="check-wrapper";
+
+    const cb=document.createElement("input");
+    cb.type="checkbox";
+    cb.className="check-input";
+    cb.id=`cb_${i}_${j}`;
+    cb.dataset.value=activeValues[i][j];
     cb.checked=localStorage.getItem(cb.id)==="true";
-    cb.addEventListener("change",()=>{ localStorage.setItem(cb.id,cb.checked); updateTotal(); });
-    const nameSpan=document.createElement("span"); nameSpan.className="item-name"; nameSpan.textContent=name;
-    const valueSpan=document.createElement("span"); valueSpan.className="item-value"; valueSpan.textContent=`+${cb.dataset.value}`;
-    wrapper.appendChild(cb); wrapper.appendChild(nameSpan); wrapper.appendChild(valueSpan);
-    itemsDiv.appendChild(wrapper);
+
+    cb.addEventListener("change",()=>{
+      localStorage.setItem(cb.id,cb.checked);
+      updateTotal();
+    });
+
+    const ns=document.createElement("span");
+    ns.className="item-name";
+    ns.textContent=name;
+
+    const vs=document.createElement("span");
+    vs.className="item-value";
+    vs.textContent=`+${cb.dataset.value}`;
+
+    wrap.appendChild(cb);
+    wrap.appendChild(ns);
+    wrap.appendChild(vs);
+    list.appendChild(wrap);
+
     checkBoxes[i][j]=cb;
   });
 
-  catDiv.appendChild(itemsDiv);
-  mainPanel.appendChild(catDiv);
+  card.appendChild(list);
+  mainPanel.appendChild(card);
 });
 
-/* 合計計算＋光るアニメ */
-function updateTotal(){
-  let total=0;
-  checkBoxes.forEach(row=>row.forEach(cb=>{ if(cb.checked) total+=parseInt(cb.dataset.value); }));
-  totalLabel.textContent="合計: "+total;
-  if(total!==lastTotal){ totalLabel.classList.remove("flash"); void totalLabel.offsetWidth; totalLabel.classList.add("flash"); lastTotal=total; }
+/* キャンドル数計算 */
+function getCandleCount(t){
+  for(const x of candleThresholds){
+    if(t<=x.max) return x.candles;
+  }
+  return 0;
 }
 
-/* 初期合計表示 */
-updateTotal();
+/* ゲージ更新 */
+function updateGauge(c){
+  const ratio=c/20;
+  gaugeFill.style.width=(ratio*100)+"%";
+  gaugeMarker.style.left=(ratio*100)+"%";
+}
+
+/* 合計更新 */
+function updateTotal(){
+  let total=0;
+  checkBoxes.forEach(row=>row.forEach(cb=>{
+    if(cb.checked) total+=parseInt(cb.dataset.value,10);
+  }));
+
+  const c=getCandleCount(total);
+  totalLabel.innerHTML=`合計: ${total} （${c}キャンドル）`;
+
+  if(c!==lastCandles){
+    updateGauge(c);
+    lastCandles=c;
+  }
+}
+
+/* 上側ラベル配置（方式A） */
+function placeTopLabels(){
+  topLabelLayer.innerHTML = "";
+
+  const rect = gaugeTrack.getBoundingClientRect();
+  if(rect.width === 0) return; // 念のため
+
+  const baseLeft = rect.left;
+  const topY     = rect.top - 24; // ゲージより少し上（好きに調整してOK）
+
+  for(let c=15;c<=20;c++){
+    const v = thresholdMap[c];
+    if(!v) continue;
+
+    const label = document.createElement("div");
+    label.className = "gauge-top-label";
+
+    const ratio = c / 20;
+    const px = baseLeft + rect.width * ratio;
+
+    label.style.left = px + "px";
+    label.style.top  = topY + "px";
+    label.textContent = v;
+
+    topLabelLayer.appendChild(label);
+  }
+}
 
 /* リセット */
 document.getElementById("resetButton").onclick=()=>{
-  checkBoxes.forEach(row=>row.forEach(cb=>{ cb.checked=false; localStorage.setItem(cb.id,false); }));
-  document.querySelectorAll('input.category-toggle').forEach(m=>m.checked=false);
+  checkBoxes.forEach(row=>row.forEach(cb=>{
+    cb.checked=false;
+    localStorage.setItem(cb.id,false);
+  }));
+  document.querySelectorAll(".category-toggle").forEach(a=>a.checked=false);
   updateTotal();
+  placeTopLabels();
 };
+
+/* 初期描画 */
+window.addEventListener("load", ()=>{
+  updateTotal();
+  placeTopLabels();
+});
+window.addEventListener("resize", placeTopLabels);
+window.addEventListener("scroll", placeTopLabels);
 </script>
 </body>
 </html>
