--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
@@ -23,32 +23,25 @@
     margin: 0 auto;
   }
 
-  /* タイトル */
-  .header-card {
-    background: none !important;
-    border: none !important;
-    box-shadow: none !important;
-    padding: 0 !important;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    gap: 14px;
-  }
-
-
+  /* タイトル（★指定どおり変更） */
   .page-title-wrapper {
-    display: inline-block;     /* 内容の幅に合わせる */
-    text-align: right;         /* 各行のお尻を揃える */
-    line-height: 1.15;         /* 行間調整（お好みで） */
-    margin-bottom: 20px;       /* 下にスペース */
+    display: block;
+    width: 100%;
+    text-align: right;  /* ★右揃え */
+    margin-bottom: 20px;
+    line-height: 1.15;
   }
-
 
   .page-title-line {
-   font-family: 'Roboto', sans-serif;
-   font-weight: 100;
-   font-size: 32px;
-   letter-spacing: 0.04em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 36px;
+    letter-spacing: 0.04em;
+  }
+
+  .page-title-line:first-child {
+    font-size: 22px;  /* Sky: Children of the Lightの部分 */
+    opacity: 0.9;
   }
 
   /* カテゴリカード */
@@ -113,11 +106,10 @@
   }
 
   .item-name {
-    flex:1; 
-    font-size:14px; 
-    font-family:'Noto Sans JP', sans-serif;
-    font-weight:600;
-  }
+   font-family: 'Roboto', sans-serif !important;
+   font-weight: 300 !important;
+   font-size: 18px !important;  /* 好きな大きさに */
+ }
   .item-value {
     font-size:12px;
     font-weight: 400;
@@ -241,14 +233,19 @@
     pointer-events:none;
     z-index:4000;
   }
-  .bottom-gauge-label {
-    position:absolute;
-    font-size:11px;
-    color:#444;
-    font-family:'Noto Sans JP',sans-serif;
-    transform:translateX(-50%);
-    white-space:nowrap;
-  }
+
+  /* ★② ここだけ色変更（薄灰→黒） */
+ .bottom-gauge-label {
+   position:absolute;
+   font-size:10px;
+   color:#000; /* 黒指定 */
+   font-family:'Noto Sans JP',sans-serif;
+   transform:translateX(-50%);
+   white-space:nowrap;
+
+   font-weight:700;           /* ★ くっきり黒にする */
+   text-shadow:0 0 1px #000;  /* ★ 黒の縁を薄く付ける */
+ }
 
   #resetButton {
     padding:8px 18px;
@@ -267,7 +264,7 @@
     align-items:flex-start;
   }
 
-  /* ▼▼ 追加：カテゴリ名横の pill タグ ▼▼ */
+  /* ▼▼ カテゴリ名横の pill タグ ▼▼ */
   .category-title {
     display:flex;
     align-items:center;
@@ -302,11 +299,12 @@
 
 <body>
 <div class="app">
-   <div class="page-title-wrapper">
-   <div class="page-title-line">Sky: Children of the Light</div>
-   <div class="page-title-line">Candle Calculator</div>
-</div>
 
+   <!-- ▼ タイトル（右寄せ） -->
+   <div class="page-title-wrapper">
+      <div class="page-title-line">Sky: Children of the Light</div>
+      <div class="page-title-line">Candle Calculator</div>
+   </div>
 
   <div id="mainPanel"></div>
 
@@ -314,15 +312,12 @@
     <div id="total">合計: 0 （0キャンドル）</div>
 
     <div class="gauge-wrapper">
-
       <div class="gauge-track" id="gaugeTrack">
         <div class="gauge-fill" id="gaugeFill"></div>
       </div>
-
       <div id="gaugeMarker">
         <img src="candle.png">
       </div>
-
     </div>
 
     <div class="south-bottom-row">
@@ -343,7 +338,7 @@
 /* ========= データ ========= */
 const categories=["孤島","草原","雨林","峡谷","捨て地","書庫","その他","ソーシャル"];
 const items=[
-  ["初期エリア","予言者の席窟","水の試練","土の試練","風の試練","火の試練"],
+  ["初期エリア","予言者の石窟","水の試練","土の試練","風の試練","火の試練"],
   ["初期エリア","村","谷","8人エリア","鳥の巣","楽園"],
   ["初期エリア","小川","神殿前","晴れ間","神殿","ツリーハウス","地下洞窟"],
   ["初期エリア","陸レース","要塞","空レース","コロセウム","神殿","夢見","隠者","隠者レース"],
