--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   .page-title-line {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    font-size: 36px;
+    font-size: 3px;
     letter-spacing: 0.04em;
   }
 
@@ -106,10 +106,11 @@
   }
 
   .item-name {
-   font-family: 'Roboto', sans-serif !important;
-   font-weight: 300 !important;
-   font-size: 18px !important;  /* 好きな大きさに */
- }
+    flex:1; 
+    font-size:14px; 
+    font-family:'Noto Sans JP', sans-serif;
+    font-weight:600;
+  }
   .item-value {
     font-size:12px;
     font-weight: 400;
@@ -293,6 +294,26 @@
       0 0 14px rgba(120,150,255,0.45),
       inset 0 0 6px rgba(255,255,255,0.8);
   }
+/* ▼▼ スマホ（〜480px）：2列にする ▼▼ */
+@media (max-width: 480px) {
+  .items {
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+  }
+}
+
+/* ▼▼ タブレット（481〜768px）：3列にする ▼▼ */
+@media (min-width: 481px) and (max-width: 768px) {
+  .items {
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
+}
+
+/* ▼▼ PC（769px〜）：4列（元のまま） ▼▼ */
+@media (min-width: 769px) {
+  .items {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
 
 </style>
 </head>
