--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
 <title>Sky キャンドル計算機</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- フォント読み込み -->
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Roboto:wght@100&family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+<!-- フォント -->
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Roboto:wght@100;300&family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
 
 <style>
   /* 全体 */
@@ -23,24 +23,21 @@
     margin: 0 auto;
   }
 
-  /* タイトル（★指定どおり変更） */
+  /* タイトル（右寄せ） */
   .page-title-wrapper {
-    display: block;
     width: 100%;
-    text-align: right;  /* ★右揃え */
+    text-align: right;
     margin-bottom: 20px;
     line-height: 1.15;
   }
-
   .page-title-line {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    font-size: 3px;
+    font-size: 32px;
     letter-spacing: 0.04em;
   }
-
   .page-title-line:first-child {
-    font-size: 22px;  /* Sky: Children of the Lightの部分 */
+    font-size: 22px;
     opacity: 0.9;
   }
 
@@ -59,13 +56,11 @@
     gap:10px;
     margin-bottom:12px;
   }
-
   .category-label {
     font-family: 'Noto Sans JP', sans-serif;
     font-size:20px;
     font-weight:700;
   }
-
   .category-toggle {
     appearance:none;
     width:20px; height:20px;
@@ -105,22 +100,25 @@
     border-color:#3a8cff;
   }
 
+  /* アイテム名：スマホ基準 */
   .item-name {
-    flex:1; 
-    font-size:14px; 
-    font-family:'Noto Sans JP', sans-serif;
-    font-weight:600;
+    flex:1;
+    font-size:12px;
+    font-family:'Roboto','Noto Sans JP',sans-serif;
+    font-weight:300;
+    white-space:nowrap;
   }
+
   .item-value {
     font-size:12px;
-    font-weight: 400;
+    font-weight:400;
     padding:2px 8px;
     border-radius:999px;
     background:rgba(61,138,255,0.08);
     border:1px solid rgba(61,138,255,0.25);
   }
 
-  /* ▼▼ 合計カード ▼▼ */
+  /* ▼ 合計カード ▼ */
   #southPanel {
     position: fixed;
     left: 50%;
@@ -151,13 +149,12 @@
     font-family:'Noto Sans JP',sans-serif;
   }
 
-  /* ▼▼ ゲージ ▼▼ */
+  /* ゲージ */
   .gauge-wrapper {
     margin-top:6px;
     margin-bottom:6px;
     position:relative;
   }
-
   .gauge-track {
     position:relative;
     height:18px;
@@ -166,7 +163,6 @@
     border:1px solid #aaa;
     overflow:hidden;
   }
-
   .gauge-fill {
     position:absolute;
     top:0; left:0;
@@ -190,6 +186,7 @@
     width:44px;
   }
 
+  /* ゲージの下メモリ */
   .gauge-segment {
     position:absolute;
     width:2px;
@@ -206,6 +203,7 @@
     background:rgba(30,30,30,0.9);
   }
 
+  /* ゲージ上ラベル */
   #topLabelLayer {
     position:fixed;
     left:0;
@@ -220,11 +218,11 @@
     font-size:12px;
     color:#000;
     font-weight:700;
-    font-family:'Noto Sans JP',sans-serif;
-    transform:translateX(-50%);
     white-space:nowrap;
+    transform:translateX(-50%);
   }
 
+  /* ゲージ下ラベル（黒） */
   #bottomLabelLayer {
     position:fixed;
     left:0;
@@ -234,19 +232,15 @@
     pointer-events:none;
     z-index:4000;
   }
-
-  /* ★② ここだけ色変更（薄灰→黒） */
- .bottom-gauge-label {
-   position:absolute;
-   font-size:10px;
-   color:#000; /* 黒指定 */
-   font-family:'Noto Sans JP',sans-serif;
-   transform:translateX(-50%);
-   white-space:nowrap;
-
-   font-weight:700;           /* ★ くっきり黒にする */
-   text-shadow:0 0 1px #000;  /* ★ 黒の縁を薄く付ける */
- }
+  .bottom-gauge-label {
+    position:absolute;
+    font-size:10px;
+    color:#000;
+    font-weight:700;
+    text-shadow:0 0 1px #000;
+    transform:translateX(-50%);
+    white-space:nowrap;
+  }
 
   #resetButton {
     padding:8px 18px;
@@ -265,13 +259,12 @@
     align-items:flex-start;
   }
 
-  /* ▼▼ カテゴリ名横の pill タグ ▼▼ */
+  /* カテゴリ名横の pill タグ */
   .category-title {
     display:flex;
     align-items:center;
     gap:10px;
   }
-
   .category-sum {
     display:inline-block;
     font-size:14px;
@@ -286,7 +279,6 @@
       inset 0 0 4px rgba(255,255,255,0.6);
     transition: opacity .25s ease, transform .25s ease, box-shadow .25s ease;
   }
-
   .category-sum.flash {
     opacity:0.9;
     transform:scale(1.12);
@@ -294,38 +286,66 @@
       0 0 14px rgba(120,150,255,0.45),
       inset 0 0 6px rgba(255,255,255,0.8);
   }
-/* ▼▼ スマホ（〜480px）：2列にする ▼▼ */
-@media (max-width: 480px) {
-  .items {
-    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
-  }
-}
 
-/* ▼▼ タブレット（481〜768px）：3列にする ▼▼ */
-@media (min-width: 481px) and (max-width: 768px) {
-  .items {
-    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-  }
-}
+  /* ================================
+     Responsive Layout
+     ================================ */
 
-/* ▼▼ PC（769px〜）：4列（元のまま） ▼▼ */
-@media (min-width: 769px) {
-  .items {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  /* スマホ（〜480px） */
+  @media (max-width:480px){
+    .items {
+      grid-template-columns:repeat(2,minmax(0,1fr)) !important;
+    }
+    .gauge-top-label{
+      display:none !important; /* 重なり防止：スマホでは非表示 */
+    }
+    
+    .daily-list{
+      display:block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+   }
   }
-}
 
+  /* タブレット（481〜768px） */
+  @media (min-width:481px) and (max-width:768px){
+    .items {
+      grid-template-columns:repeat(3,minmax(0,1fr)) !important;
+    }
+    .gauge-top-label{
+      display:none !important;
+    }
+    .daily-list{
+      display:none !important;
+    }
+  }
+
+  /* PC（769px〜） */
+  @media (min-width:769px){
+    .items {
+      grid-template-columns:repeat(4,minmax(0,1fr));
+    }
+    .item-name{
+      font-size:14px !important;
+      font-family:'Noto Sans JP',sans-serif !important;
+      font-weight:600 !important;
+    }
+    .daily-list{
+      display:none;
+    }
+    /* PCでは上ラベルを表示するので display:none は付けない */
+  }
 </style>
 </head>
 
 <body>
 <div class="app">
 
-   <!-- ▼ タイトル（右寄せ） -->
-   <div class="page-title-wrapper">
-      <div class="page-title-line">Sky: Children of the Light</div>
-      <div class="page-title-line">Candle Calculator</div>
-   </div>
+  <!-- タイトル -->
+  <div class="page-title-wrapper">
+    <div class="page-title-line">Sky: Children of the Light</div>
+    <div class="page-title-line">Candle Calculator</div>
+  </div>
 
   <div id="mainPanel"></div>
 
@@ -344,6 +364,7 @@
     <div class="south-bottom-row">
       <div>
         <div id="required">デイリーライト: <b>2055（15キャンドル）</b></div>
+        <div id="dailyList" class="daily-list"></div>
       </div>
       <button id="resetButton">全てリセット</button>
     </div>
@@ -400,24 +421,24 @@ const candleThresholds=[
   {max:Infinity,candles:20}
 ];
 
-const thresholdMap = {
-  15:2055, 16:2268, 17:2481, 18:2719, 19:3207, 20:4195
+const thresholdMap={
+  15:2055,16:2268,17:2481,18:2719,19:3207,20:4195
 };
 
-const isSunday = (new Date().getDay() === 0);
+const isSunday = (new Date().getDay()===0);
 let activeValues = isSunday ? sundayValues : values;
 
-const mainPanel  = document.getElementById("mainPanel");
-const totalLabel = document.getElementById("total");
-const gaugeFill  = document.getElementById("gaugeFill");
-const gaugeMarker= document.getElementById("gaugeMarker");
-const gaugeTrack = document.getElementById("gaugeTrack");
-const topLabelLayer = document.getElementById("topLabelLayer");
+const mainPanel      = document.getElementById("mainPanel");
+const totalLabel     = document.getElementById("total");
+const gaugeFill      = document.getElementById("gaugeFill");
+const gaugeMarker    = document.getElementById("gaugeMarker");
+const gaugeTrack     = document.getElementById("gaugeTrack");
+const topLabelLayer  = document.getElementById("topLabelLayer");
 const bottomLabelLayer = document.getElementById("bottomLabelLayer");
 
-let checkBoxes=[];
-let lastCandles=0;
-let categorySumTags=[];
+let checkBoxes      = [];
+let lastCandles     = 0;
+let categorySumTags = [];
 
 /* 下メモリ生成 */
 for(let i=1;i<=19;i++){
@@ -450,7 +471,6 @@ categories.forEach((cat,i)=>{
     updateCategoryTotals();
   });
 
-  /* ▼ カテゴリ名 + pill タグ */
   const titleWrap=document.createElement("div");
   titleWrap.className="category-title";
 
@@ -533,17 +553,15 @@ function updateTotal(){
   checkBoxes.forEach(row=>row.forEach(cb=>{
     if(cb.checked) total+=parseInt(cb.dataset.value,10);
   }));
-
   const c=getCandleCount(total);
   totalLabel.innerHTML=`合計: ${total} （${c}キャンドル）`;
-
   if(c!==lastCandles){
     updateGauge(c);
     lastCandles=c;
   }
 }
 
-/* ★ カテゴリ小計 pill 更新 */
+/* カテゴリ小計 pill 更新 */
 function updateCategoryTotals(){
   categories.forEach((cat,i)=>{
     let sum=0;
@@ -551,64 +569,77 @@ function updateCategoryTotals(){
       if(cb.checked) sum+=parseInt(cb.dataset.value,10);
     });
 
-    const tag = categorySumTags[i];
-    const newText = `(+${sum})`;
+    const tag=categorySumTags[i];
+    const newText=`(+${sum})`;
 
-    if(tag.textContent !== newText){
-      tag.textContent = newText;
-
+    if(tag.textContent!==newText){
+      tag.textContent=newText;
       tag.classList.add("flash");
       setTimeout(()=>tag.classList.remove("flash"),250);
     }
   });
 }
 
-/* ★ 上側ラベル配置 */
+/* 上側ラベル配置（PC用） */
 function placeTopLabels(){
   topLabelLayer.innerHTML = "";
   const rect = gaugeTrack.getBoundingClientRect();
   const topY = rect.top - 24;
 
   for(let c=15;c<=20;c++){
-    const v=thresholdMap[c];
+    const v = thresholdMap[c];
     if(!v) continue;
-
     const label=document.createElement("div");
     label.className="gauge-top-label";
 
-    const px = rect.left + rect.width * (c/20);
-
-    label.style.left = px+"px";
-    label.style.top  = topY+"px";
+    const px = rect.left + rect.width * (c/20);  // ゲージ上の実座標
+    label.style.left = px + "px";
+    label.style.top  = topY + "px";
     label.textContent = v;
 
     topLabelLayer.appendChild(label);
   }
 }
 
-/* ★ 下側ラベル配置 */
+/* 下側ラベル配置 */
 function placeBottomLabels(){
   bottomLabelLayer.innerHTML="";
-
-  const rect = gaugeTrack.getBoundingClientRect();
-  const y = rect.bottom + 4;
+  const rect=gaugeTrack.getBoundingClientRect();
+  const y=rect.bottom + 4;
 
   const positions={0:0,5:5,10:10,15:15,20:20};
-
   for(const n in positions){
-    const ratio = positions[n]/20;
-    const px = rect.left + rect.width * ratio;
+    const ratio=positions[n]/20;
+    const px=rect.left + rect.width*ratio;
 
     const label=document.createElement("div");
     label.className="bottom-gauge-label";
-    label.style.left = px+"px";
-    label.style.top  = y+"px";
-    label.textContent = n;
-
+    label.style.left=px+"px";
+    label.style.top=y+"px";
+    label.textContent=n;
     bottomLabelLayer.appendChild(label);
   }
 }
 
+
+function updateDailyList(){
+  const list = document.getElementById("dailyList");
+
+  // CSS と同じ「max-width: 480px」
+  const isMobile = window.matchMedia("(max-width: 480px)").matches;
+
+  if (!isMobile) {
+    list.textContent = "";
+    return;
+  }
+
+  list.textContent =
+    `16本：${thresholdMap[16]}　`+
+    `17本：${thresholdMap[17]}　`+
+    `18本：${thresholdMap[18]}　`+
+    `19本：${thresholdMap[19]}　`+
+    `20本：${thresholdMap[20]}`;
+}
 /* リセット */
 resetButton.onclick=()=>{
   checkBoxes.forEach(row=>row.forEach(cb=>{
@@ -620,6 +651,7 @@ resetButton.onclick=()=>{
   updateCategoryTotals();
   placeTopLabels();
   placeBottomLabels();
+  updateDailyList();
 };
 
 /* 初期表示 */
@@ -628,11 +660,17 @@ window.addEventListener("load",()=>{
   updateCategoryTotals();
   placeTopLabels();
   placeBottomLabels();
+  updateDailyList();
 });
+
+/* サイズ変更 */
 window.addEventListener("resize",()=>{
   placeTopLabels();
   placeBottomLabels();
+  updateDailyList();
 });
+
+/* スクロール（位置補正） */
 window.addEventListener("scroll",()=>{
   placeTopLabels();
   placeBottomLabels();
