--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
     text-align: right;
     margin-bottom: 20px;
     line-height: 1.15;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .page-title-line {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 32px;
     letter-spacing: 0.04em;
+     user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .page-title-line:first-child {
     font-size: 22px;
@@ -55,11 +61,17 @@
     align-items:center;
     gap:10px;
     margin-bottom:12px;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .category-label {
     font-family: 'Noto Sans JP', sans-serif;
     font-size:20px;
     font-weight:700;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .category-toggle {
     appearance:none;
@@ -67,6 +79,9 @@
     border-radius:6px;
     border:2px solid #ff9b42;
     background:#fff;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .category-toggle:checked {
     background:linear-gradient(135deg,#ffb36b,#ff9b42);
@@ -87,6 +102,9 @@
     background:rgba(248,251,255,0.95);
     border:1px solid rgba(185,211,255,0.6);
     transition: background .25s, border-color .25s;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   .check-input {
@@ -115,6 +133,9 @@
     font-family:'Roboto','Noto Sans JP',sans-serif;
     font-weight:300;
     white-space:nowrap;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   .item-value {
@@ -124,6 +145,9 @@
     border-radius:999px;
     background:rgba(61,138,255,0.08);
     border:1px solid rgba(61,138,255,0.25);
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   /* ▼ 合計カード ▼ */
@@ -148,6 +172,9 @@
     font-weight: 700;
     color: #2d3a80;
     font-family:'Noto Sans JP',sans-serif;
+     user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   #required {
@@ -192,6 +219,9 @@
   }
   #gaugeMarker img {
     width:44px;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   /* ゲージの下メモリ */
@@ -248,6 +278,9 @@
     text-shadow:0 0 1px #000;
     transform:translateX(-50%);
     white-space:nowrap;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   #resetButton {
@@ -258,6 +291,9 @@
     border:none;
     cursor:pointer;
     font-weight:700;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   .south-bottom-row {
@@ -265,6 +301,9 @@
     display:flex;
     justify-content:space-between;
     align-items:flex-start;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
 
   /* カテゴリ名横の pill タグ */
@@ -272,6 +311,9 @@
     display:flex;
     align-items:center;
     gap:10px;
+    user-select: none;
+    -webkit-user-select: none; /* Safari対応 */
+    -ms-user-select: none;      /* 古いIE対応 */
   }
   .category-sum {
     display:inline-block;
